logs/dag_id=dag_with_postgres_operator_v03/run_id=scheduled__2022-09-04T00:00:00+00:00/task_id=delete_data_from_table/attempt=1.log
[2022-09-05T21:05:01.849+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_operator_v03.delete_data_from_table scheduled__2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05T21:05:01.869+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_operator_v03.delete_data_from_table scheduled__2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05T21:05:01.870+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2022-09-05T21:05:01.870+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 6
[2022-09-05T21:05:01.870+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2022-09-05T21:05:01.894+0000] {taskinstance.py:1389} INFO - Executing <Task(PostgresOperator): delete_data_from_table> on 2022-09-04 00:00:00+00:00
[2022-09-05T21:05:01.902+0000] {standard_task_runner.py:52} INFO - Started process 11805 to run task
[2022-09-05T21:05:01.907+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v03', 'delete_data_from_table', 'scheduled__2022-09-04T00:00:00+00:00', '--job-id', '405', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operators.py', '--cfg-path', '/tmp/tmpupzr7dki', '--error-file', '/tmp/tmp0rj3glrc']
[2022-09-05T21:05:01.909+0000] {standard_task_runner.py:80} INFO - Job 405: Subtask delete_data_from_table
[2022-09-05T21:05:02.027+0000] {task_command.py:371} INFO - Running <TaskInstance: dag_with_postgres_operator_v03.delete_data_from_table scheduled__2022-09-04T00:00:00+00:00 [running]> on host c033faf33c57
[2022-09-05T21:05:02.177+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Ancordss
AIRFLOW_CTX_DAG_ID=dag_with_postgres_operator_v03
AIRFLOW_CTX_TASK_ID=delete_data_from_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05T21:05:02.195+0000] {base.py:68} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-09-05T21:05:02.209+0000] {sql.py:315} INFO - Running statement: delete from dag_runs where dt =  ('2022-09-04' and dag_id = 'dag_with_postgres_operator_v03';), parameters: None
[2022-09-05T21:05:02.226+0000] {taskinstance.py:1902} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 1: ...'2022-09-04' and dag_id = 'dag_with_postgres_operator_v03';)
                                                                     ^

[2022-09-05T21:05:02.258+0000] {taskinstance.py:1412} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v03, task_id=delete_data_from_table, execution_date=20220904T000000, start_date=20220905T210501, end_date=20220905T210502
[2022-09-05T21:05:02.285+0000] {standard_task_runner.py:97} ERROR - Failed to execute job 405 for task delete_data_from_table (syntax error at or near ";"
LINE 1: ...'2022-09-04' and dag_id = 'dag_with_postgres_operator_v03';)
                                                                     ^
; 11805)
[2022-09-05T21:05:02.328+0000] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-09-05T21:05:02.429+0000] {local_task_job.py:279} INFO - 0 downstream tasks scheduled from follow-on schedule check
